# ons-crow

./: .gitignore  README.md  pyproject.toml
version1_tkinter/: CROW_clusters.py  Config_clusters.ini  README.md
version1_tkinter/docs/: Cluster_Version_Instructions.md  cluster_version_instructions.md
