[project]
name = "ons-crow"
version = "0.1.0"
description = "An app to facilitate clerical review of linked data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas~=2.3.0"]

[project.optional-dependencies]
crow2 = ["flask>=3.1.3", "flask-session>=0.8.0"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
